# Scheduler-of-Pointnity-N.1.1.0

./: CMakeLists.txt  INSTALL  LICENSE  README.md
CMakeModules/: FindThrift.cmake
conf/: etc_profile  executor.conf  groups.xml  jobs_manager.conf  kvm.xml  lxc.conf  resource_scheduler.conf  submit_app.xml  submit_img.xml  submit_job.xml  submit_job1.xml  submit_job2.xml  submit_job3.xml  submit_job4.xml  submit_job5.xml  submit_job6.xml  submit_job_e.xml  submit_job_e2.xml  submit_job_e3.xml  submit_job_e4.xml  submit_job_engineering.xml  submit_job_test.xml  submitter.conf
script/: cancel_hdfs.sh  clean_for_git.sh  clean_proxy.sh  clean_zk.sh  install.sh  install_hdfs.sh  setup_zk.sh  update_executor.sh  zk_control.sh
src/: CMakeLists.txt
src/JobsManager/: CMakeLists.txt  app_manager.cpp  app_manager.h  batch_job.cpp  batch_job.h  batch_task.cpp  batch_task.h  config.cpp  constraint_edge.h  default_scheduler.cpp  default_scheduler.h  dispatcher.cpp  dispatcher.h  event.cpp  event.h  group.cpp  group.h  group_pool.cpp  group_pool.h  handler.cpp  handler.h  image_manager.cpp  image_manager.h  job.cpp  job.h  job_enum.h  job_master.cpp  job_master.h  job_num.h  job_parser.cpp  job_parser.h  job_pool.cpp  job_pool.h  job_scheduler.cpp  job_scheduler.h  jobs_manager_main.cpp  jobs_manager_service.cpp  jobs_manager_service.h  task.cpp  task.h  (+5 more)
src/ResourceScheduler/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  event.cpp  event.h  handler.cpp  handler.h  machine.cpp  machine.h  machine_constances.h  match_list.cpp  match_list.h  match_maker.cpp  match_maker.h  (+6 more)
(+368 files in other folders)
