CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
SET(CMAKE_INSTALL_PATH "${CMAKE_SOURCE_DIR}/bin/")
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")
SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}")

PROJECT(LYNN)

SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++0x -DTHREADED -Wno-deprecated -DHAVE_NETINET_IN_H -O1")

# 3rd party
FIND_PACKAGE(Thrift REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(JNI REQUIRED)

# get jvm library directory
STRING(REGEX REPLACE "([^\n]+/)[^\n/]+$" "\\1" JVM_LIBRARAY_DIR "${JAVA_JVM_LIBRARY}")
SET(LIBRARY ${JVM_LIBRARAY_DIR})

# the RPATH to be add when installing, if only it's not system directory
